--- a/package.json
+++ b/package.json
@@ -43,7 +43,9 @@
     "react-icons": "^4.8.0",
     "tailwindcss": "3.3.2",
     "tailwindcss-react": "^0.0.0",
-    "typescript": "5.0.4"
+    "typescript": "5.0.4",
+
+    "mdi-material-ui": "^7.1.0"
   },
   "prettier": {
     "arrowParens": "always",
