--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev",
+    "dev": "next dev ",
     "build": "next build",
     "start": "next start",
     "lint": "next lint"
@@ -15,9 +15,14 @@
     "@prisma/client": "^4.14.1",
     "@tailwindcss/forms": "^0.5.3",
     "autoprefixer": "10.4.14",
+    "axios": "^1.4.0",
+    "bcrypt": "^5.1.0",
     "bcryptjs": "^2.4.3",
+    "jsonwebtoken": "^9.0.0",
     "next": "13.4.4",
+    "next-auth": "^4.22.1",
     "next-connect": "^1.0.0",
+    "nodemailer": "^6.9.3",
     "postcss": "8.4.24",
     "react": "18.2.0",
     "react-dom": "18.2.0",
@@ -26,6 +31,6 @@
     "tailwindcss": "3.3.2"
   },
   "devDependencies": {
-    "prisma": "^4.14.1"
+    "prisma": "^4.15.0"
   }
 }
