--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "dotenv": "^16.1.3",
     "jsonwebtoken": "^9.0.0",
     "jwt-decode": "^3.1.2",
+    "multiparty": "^4.2.3",
     "next": "13.4.4",
     "next-auth": "^4.22.1",
     "next-connect": "^1.0.0",
@@ -32,6 +33,8 @@
     "react-icons": "^4.9.0",
     "react-modal": "^3.16.1",
     "react-router-dom": "^6.11.2",
+    "react-sortablejs": "^6.1.4",
+    "react-spinners": "^0.13.8",
     "tailwindcss": "3.3.2"
   },
   "devDependencies": {
