--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "axios": "^1.4.0",
     "bcrypt": "^5.1.0",
     "bcryptjs": "^2.4.3",
+    "cookie": "^0.5.0",
     "dotenv": "^16.1.3",
     "jsonwebtoken": "^9.0.0",
     "jwt-decode": "^3.1.2",
@@ -28,6 +29,7 @@
     "nodemailer": "^6.9.3",
     "nookies": "^2.5.2",
     "postcss": "8.4.24",
+    "prop-types": "^15.8.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-icons": "^4.9.0",
