--- a/package.json
+++ b/package.json
@@ -9,12 +9,13 @@
     "lint": "next lint"
   },
   "dependencies": {
- 
     "@fortawesome/free-solid-svg-icons": "^6.4.0",
     "@headlessui/react": "^1.7.14",
     "@heroicons/react": "^2.0.18",
-
     "@prisma/client": "^4.15.0",
+    "@progress/kendo-react-buttons": "^5.14.1",
+    "@progress/kendo-react-form": "^5.14.1",
+    "@progress/kendo-react-layout": "^5.14.1",
     "@tailwindcss/forms": "^0.5.3",
     "autoprefixer": "10.4.14",
     "axios": "^1.4.0",
