--- a/package.json
+++ b/package.json
@@ -9,11 +9,9 @@
     "lint": "next lint"
   },
   "dependencies": {
- 
     "@fortawesome/free-solid-svg-icons": "^6.4.0",
     "@headlessui/react": "^1.7.14",
     "@heroicons/react": "^2.0.18",
-
     "@prisma/client": "^4.15.0",
     "@tailwindcss/forms": "^0.5.3",
     "autoprefixer": "10.4.14",
@@ -24,6 +22,7 @@
     "dotenv": "^16.1.3",
     "jsonwebtoken": "^9.0.0",
     "jwt-decode": "^3.1.2",
+    "libphonenumber-js": "^1.10.36",
     "multiparty": "^4.2.3",
     "next": "13.4.4",
     "next-auth": "^4.22.1",
