--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "axios": "^1.4.0",
     "bcrypt": "^5.1.0",
     "bcryptjs": "^2.4.3",
+    "boxicons": "^2.1.4",
     "cookie": "^0.5.0",
     "dotenv": "^16.1.3",
     "jsonwebtoken": "^9.0.0",
@@ -47,6 +48,6 @@
     "@types/bcrypt": "^5.0.0",
     "@types/node": "20.2.5",
     "@types/react": "18.2.7",
-    "prisma": "^4.15.0"
+    "prisma": "^4.16.1"
   }
 }
