--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
     "@tailwindcss/forms": "^0.5.3",
     "autoprefixer": "10.4.14",
     "axios": "^1.4.0",
-    "bcrypt": "^5.1.0",
+    "bcrypt": "^5.0.1",
     "bcryptjs": "^2.4.3",
     "boxicons": "^2.1.4",
     "cookie": "^0.5.0",
@@ -36,12 +36,15 @@
     "postcss": "8.4.24",
     "prop-types": "^15.8.1",
     "react": "18.2.0",
+    "react-calendar": "^4.3.0",
+    "react-datepicker": "^4.14.1",
     "react-dom": "18.2.0",
     "react-icons": "^4.9.0",
     "react-modal": "^3.16.1",
     "react-router-dom": "^6.11.2",
     "react-sortablejs": "^6.1.4",
     "react-spinners": "^0.13.8",
+    "react-transition-group": "^4.4.5",
     "tailwindcss": "3.3.2"
   },
   "devDependencies": {
