--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
   },
   "dependencies": {
     "@fortawesome/free-solid-svg-icons": "^6.4.0",
-    "@headlessui/react": "^1.7.14",
+    "@headlessui/react": "1.7.15",
     "@heroicons/react": "^2.0.18",
     "@prisma/client": "^4.15.0",
     "@progress/kendo-react-buttons": "^5.14.1",
@@ -19,11 +19,11 @@
     "@tailwindcss/forms": "^0.5.3",
     "autoprefixer": "10.4.14",
     "axios": "^1.4.0",
-    "bcrypt": "^5.0.1",
+    "bcrypt": "^5.1.0",
     "bcryptjs": "^2.4.3",
     "boxicons": "^2.1.4",
     "cookie": "^0.5.0",
-    "dotenv": "^16.1.3",
+    "dotenv": "16.3.1",
     "jsonwebtoken": "^9.0.0",
     "jwt-decode": "^3.1.2",
     "libphonenumber-js": "^1.10.36",
@@ -37,14 +37,13 @@
     "prop-types": "^15.8.1",
     "react": "18.2.0",
     "react-calendar": "^4.3.0",
-    "react-datepicker": "^4.14.1",
     "react-dom": "18.2.0",
     "react-icons": "^4.9.0",
     "react-modal": "^3.16.1",
-    "react-router-dom": "^6.11.2",
+    "react-router-dom": "6.14.0",
     "react-sortablejs": "^6.1.4",
     "react-spinners": "^0.13.8",
-    "react-transition-group": "^4.4.5",
+    "react-toastify": "^9.1.3",
     "tailwindcss": "3.3.2"
   },
   "devDependencies": {
