--- a/package.json
+++ b/package.json
@@ -23,12 +23,13 @@
     "bcryptjs": "^2.4.3",
     "boxicons": "^2.1.4",
     "cookie": "^0.5.0",
+    "date-fns": "^2.30.0",
     "dotenv": "16.3.1",
     "jsonwebtoken": "^9.0.0",
     "jwt-decode": "^3.1.2",
     "libphonenumber-js": "^1.10.36",
     "multiparty": "^4.2.3",
-    "next": "13.4.4",
+    "next": "13.4.7",
     "next-auth": "^4.22.1",
     "next-connect": "^1.0.0",
     "nodemailer": "^6.9.3",
@@ -37,6 +38,7 @@
     "prop-types": "^15.8.1",
     "react": "18.2.0",
     "react-calendar": "^4.3.0",
+    "react-datepicker": "^4.14.1",
     "react-dom": "18.2.0",
     "react-icons": "^4.9.0",
     "react-modal": "^3.16.1",
