--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "cookie": "^0.5.0",
     "date-fns": "^2.30.0",
     "dotenv": "16.3.1",
+    "framer-motion": "^10.12.18",
     "jsonwebtoken": "^9.0.0",
     "jwt-decode": "^3.1.2",
     "libphonenumber-js": "^1.10.36",
@@ -41,6 +42,7 @@
     "react-datepicker": "^4.14.1",
     "react-dom": "18.2.0",
     "react-icons": "^4.9.0",
+    "react-intersection-observer": "^9.5.2",
     "react-modal": "^3.16.1",
     "react-router-dom": "6.14.0",
     "react-sortablejs": "^6.1.4",
