--- a/package.json
+++ b/package.json
@@ -26,9 +26,11 @@
     "date-fns": "^2.30.0",
     "dotenv": "16.3.1",
     "framer-motion": "^10.12.18",
+    "js-cookie": "^3.0.5",
     "jsonwebtoken": "^9.0.0",
     "jwt-decode": "^3.1.2",
     "libphonenumber-js": "^1.10.36",
+    "moment": "^2.29.4",
     "multiparty": "^4.2.3",
     "next": "13.4.7",
     "next-auth": "^4.22.1",
@@ -40,6 +42,7 @@
     "react": "18.2.0",
     "react-calendar": "^4.3.0",
     "react-datepicker": "^4.14.1",
+    "react-dates": "^21.8.0",
     "react-dom": "18.2.0",
     "react-icons": "^4.9.0",
     "react-intersection-observer": "^9.5.2",
@@ -47,6 +50,7 @@
     "react-router-dom": "6.14.0",
     "react-sortablejs": "^6.1.4",
     "react-spinners": "^0.13.8",
+    "react-spring": "^9.7.2",
     "react-toastify": "^9.1.3",
     "tailwindcss": "3.3.2"
   },
