--- a/package.json
+++ b/package.json
@@ -22,15 +22,19 @@
     "bcrypt": "^5.1.0",
     "bcryptjs": "^2.4.3",
     "boxicons": "^2.1.4",
+    "chart.js": "^4.3.0",
     "cookie": "^0.5.0",
+    "cors": "^2.8.5",
     "date-fns": "^2.30.0",
     "dotenv": "16.3.1",
+    "express": "^4.18.2",
     "framer-motion": "^10.12.18",
     "js-cookie": "^3.0.5",
     "jsonwebtoken": "^9.0.0",
     "jwt-decode": "^3.1.2",
     "libphonenumber-js": "^1.10.36",
     "moment": "^2.29.4",
+    "multer": "^1.4.5-lts.1",
     "multiparty": "^4.2.3",
     "next": "13.4.7",
     "next-auth": "^4.22.1",
@@ -41,6 +45,7 @@
     "prop-types": "^15.8.1",
     "react": "18.2.0",
     "react-calendar": "^4.3.0",
+    "react-chartjs-2": "^5.2.0",
     "react-datepicker": "^4.14.1",
     "react-dates": "^21.8.0",
     "react-dom": "18.2.0",
@@ -52,6 +57,8 @@
     "react-spinners": "^0.13.8",
     "react-spring": "^9.7.2",
     "react-toastify": "^9.1.3",
+    "socket.io": "^4.7.1",
+    "socket.io-client": "^4.7.1",
     "tailwindcss": "3.3.2"
   },
   "devDependencies": {
